--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="col-sm-8">
                 <p class="lead">
-                Hi, my name is Madeline Burke and I am a Senior at Worcester Polytechnic Institute (WPI). I am majoring in Computer Science and minoring in Data Science and Business.
+                Hi, my name is Madeline Burke and I am a Senior at Worcester Polytechnic Institute (WPI). I am majoring in Computer Science and minoring in Data Science and Business. Interests of mine include front-end development, Human-Computer Interaction, and project management.
                 </p>
                 <p class="lead">
                 Outside of the classroom, I am also a <a href="https://athletics.wpi.edu/sports/wrowing/2017-18/bios/burke_madeline_6glg?view=news">coxswain on WPI's Varsity Rowing Team</a>. 
@@ -115,11 +115,13 @@
     
         <br>
         
-    <div class="panel-footer">
+    <footer class="panel-footer">
         <div class="container">
-        <p> Contact Info: mburke@wpi.edu  www.linkedin.com/madeline-burke</p>
+            <div class="row">
+                <span class="h3 small" style="text-align: center">mburke@wpi.edu &#8226; linkedin.com/madeline-burke</span>
+            </div>
         </div>
-    </div>
+    </footer>
    
   </body>
 </html>
