Update intex html page with relevant courses. Fix minor typos.

--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
   <body>
     <h1>Information about Michael Taylor</h1>
     <p>
-      Hi i'm Michael Taylor. I'm a Computer Science major, minoring in Data Science. </br>My focus is in software and app/web development. I am graduating in May 2019.
+      Hi i'm Michael Taylor. I'm a Computer Science major, minoring in Data Science. </br>My focus is in software and app/web development. I am in the class of 2019.
     </p>
 	<h2>Experience</h2>
 	<div class="lists">
-    <h3>
-      Working experience
+	<h3>
+      Important Computer Science Courses Taken
     </h3>
 	<ul>
-      <li>Digital Federal Credit Union</li>
-      <li>Raytheon</li>
-      <li>WPI</li>
+      <li>Software Engineering</li>
+      <li>Object Oriented Analysis and Design</li>
+	  <li>Mobile and Ubiquitous Computing</li>
+	  <li>Systems Programming Concepts</li>
+	  <li>Operating Systems</li>
     </ul>
 	<h3>
       Webware experience
@@ -40,6 +42,13 @@
 	  <li>Java (A Lot)</li>
 	  <li>Python (Some)</li>
 	  <li>Unit Testing (Some)</li>
+    </ul>
+	<h3>
+      Work experience
+    </h3>
+	<ul>
+      <li>Digital Federal Credit Union</li>
+      <li>Raytheon</li>
     </ul>
 	</div>
 	    <h4>
