--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<h2>Experience</h2>
 	<div class="lists">
 	<h3>
-      Important Computer Science Courses Taken
+      Computer Science Courses
     </h3>
 	<ul>
       <li>Software Engineering</li>
@@ -33,7 +33,7 @@
 	  <li>Operating Systems</li>
     </ul>
 	<h3>
-      Webware experience
+      Webware Related
     </h3>
     <ul>
       <li>HTML (Some)</li>
@@ -44,7 +44,7 @@
 	  <li>Unit Testing (Some)</li>
     </ul>
 	<h3>
-      Work experience
+      Work
     </h3>
 	<ul>
       <li>Digital Federal Credit Union</li>
