--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
-<html lang="en">
+<html lang="en" style = "position:relative; width:100%; height:80px; background-color:#A7D7A2;">
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
   </head>
+
   <body>
-    <h1>Information about Yaofeng Wang, WPI 2019' </h1>
+
+    <center><div id = "title" style = "position:relative; width:70%; height:1280px; background-color:#FFFFFF; border-radius: 5px; 
+    border-style: solid; border-color :#23404F; ">
+      <h1 style = "color: #23404F;">Information about </h1>
+      <h1 style = "color: #23404F;">Yaofeng Wang, WPI 2019' </h1> 
+
     <p>
-      Hi everyone, welcome to my page! My name is Yaofeng Wang, originally from Shenyang, China, living in Worcester, MA, USA. I am a senior at Worcester Polytechnic institute double majoring in Computer Science and Industrial Engineering. I enjoy singing and watching movies. One of my life goals is to travel around the world and visit all continents.
+      Hi everyone, welcome to my page! My name is Yaofeng Wang, originally from Shenyang, China, living in Worcester, MA, USA. I am a senior at Worcester Polytechnic Institute double majoring in Computer Science and Industrial Engineering. I enjoy singing and watching movies. One of my life goals is to travel around the world and visit all continents.
     </p>
-    
-    <h4> * Majors: </h4>
-    <p>
-      Computer Science (CS) & Industrial Engineering (IE)
+    <div id = "Majors">
+    <img style = "position:absolute; left:70px; top:50px;" src = "wpi.png" height="100" width="130" ／>
+    <h4 style = "color: #23404F; font-style: italic; font-size: 25px"> Majors: </h4>
+    <p style = "font-weight: bold; font-size: 18px">
+      Computer Science (CS) / Industrial Engineering (IE)
     </p>
-    
-    <h4>* Previous Computer Science courses taken at WPI:</h4>
+    </div>
+    <h4 style = "color: #23404F; font-style: italic; font-size: 25px"> Previous Computer Science courses taken at WPI:</h4>
+    <img style = "position:absolute; left:70px; top:240px;" src = "computer.png" height="100" width="130" ／>
+    <img style = "position:absolute; right:70px; top:230px;" src = "ie.jpg" height="100" width="140" ／>
+
+    <img style = "position:absolute; left:50px; top:400px;" src = "code.png" height="150" width="180" ／>
+    <img style = "position:absolute; right:50px; top:390px;" src = "class.png" height="150" width="180" ／>
     <p>
       CS1101 Introduction To Program Design <br />
       CS2022 Discrete Mathematics <br />
@@ -30,7 +42,7 @@
       CS4341 Introduction To Artificial Intelligence <br />
       CS4801 Introduction To Cryptography And Communication Security <br />
     </p>
-    <h4>* Experience with the following technologies and methods</h4>
+    <h4 style = "color: #23404F;">* Experience with the following technologies and methods</h4>
     <p> 
       HTML: some <br />
       CSS: none <br />
@@ -40,7 +52,7 @@
       Python: a lot <br />
       Unit testing: none <br />
     </p>
-    <h2>Experience</h2>
+    <h2 style = "color: #23404F;">Experience</h2>
     <p>
       Working experience
     </p>
@@ -52,7 +64,6 @@
       <li>
         Information Architect Intern, The Hanover Insurance Group, Worcester, MA <br />
         June 2018 - August 2018 <br />
-        Mapped a process to ... <br />
       </li>
 
       <li>
@@ -63,9 +74,11 @@
       <li>
         Web Developer Intern, Chinese Academy of Sciences, Shenyang, China <br />
         May 2016 - August 2016 <br />
-        Edited the company website in Java, JavaScript, and HTML allowing employee communication. Built a database of the employees’ information using Oracle SQL. Enhanced the website with pictures, dropdown lists, checkboxes, and keywords searches.
+        Edited the company website in Java, JavaScript, and HTML allowing employee communication. Built a database of the employees information using Oracle SQL. Enhanced the website with pictures, dropdown lists, checkboxes, and keywords searches.
       </li>
-
     </ul>
+  
+  </div>
+</center>
   </body>
 </html>
