--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body bgcolor="#ffffff">
 <div class="sidenav">
-    <img src="profile.png" alt="Sarah's Photo" style="width: 190px; height: 190px;">
+    <img src="https://scontent-iad3-1.xx.fbcdn.net/v/t31.0-8/fr/cp0/e15/q65/18402337_1340652479305983_8461154627284331573_o.jpg?_nc_cat=0&efg=eyJpIjoidCJ9&oh=188dc5d3b95da337c6d6aad6acc3cd97&oe=5C39EF94" alt="Sarah's Photo" style="width: 190px; height: 190px;">
     <p><a href="https://github.com/saraharm"> Github </a></p>
     <p><a href="https://www.linkedin.com/in/sarah-armstrong-486b09156/"> Linked In </a></p>
 </div>
