--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Information about Matthew Kornitsky</h1>
 
     <div class="info-container">
-        <p>I am am aspiring web developer and Computer Science major in the Class of 2020.</p>
+        <p>I am an aspiring web developer and Computer Science major in the Class of 2020.</p>
         <p>In my spare time, I enjoy snowboarding, mountain biking, and tinkering with Photoshop.</p>
     </div>
 
