--- a/index.html
+++ b/index.html
@@ -1,27 +1,125 @@
-<html lang="en">
-  <head>
-    <title>CS4241 Assignment 1</title>
-    <meta charset="utf-8">
-  </head>
-  <body>
-    <h1>Information about [Your name here]</h1>
-    <p>
-      [Self introduction]
-    </p>
-    <p>
-      [Major and other information]
-    </p>
-    <p>
-      [Other things]
-    </p>
+﻿<html lang="en">
+<head>
+  <title>CS4241 Assignment 1</title>
+  <meta charset="utf-8">
+</head>
+<body>
+<h1>Information about [Your name here]</h1>
+<p>
+  [Self introduction]
+<ul>
+  <li>
+    Name: Peter Nolan
+  </li>
+  <li>
+    Class: 2019
+  </li>
+</ul>
+</p>
+<p>
+  [Major and other information]
+<ul>
+  <li>
+    Major: Computer Science
+  </li>
+  <li>
+    Minor: Interactive Media and Game Development
+  </li>
 
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
-    <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
-    </ul>
-  </body>
+</ul>
+</p>
+<p>
+  [Other things]
+</p>
+<ul>
+  <li>
+    Member of WPI Game Development Club
+  </li>
+</ul>
+
+<h2>Experience</h2>
+<p>
+  Working experience
+</p>
+<ul>
+  <li>WPI
+    <p>Have engaged in numerous classes that have furthered my understanding of Front and Back End Development.</p></li>
+    
+  <li>
+    Changing the Present: Worked as Intern using HTML and CSS for Front End Development.
+  </li>
+</ul>
+
+<p>
+  Previous CS Classes
+</p>
+
+<ul>
+    <li>
+        CS 4518: Mobile and Ubiquitous Computing
+    </li>
+    <li>
+        CS 4401: Software Security Engineering 
+    </li>
+    <li>
+        CS 4341: Introduction to Artificial Intelligence
+    </li>
+    <li>
+        CS 3733: Software Engineering
+    </li>
+    <li>
+        CS 3431: Database Systems I
+    </li>
+    <li>
+        CS 3043: Social Implications of Information Processing
+    </li>
+    <li>
+        CS 3041: Human Computer Interaction
+    </li>
+    <li>
+        CS 2303: Systems Programming Concepts
+    </li>
+    <li>
+        CS 2223: Algorithms
+    </li>
+    <li>
+        CS 2102: Object Oriented Design Concepts
+    </li>
+    <li>
+        CS 2022: Discrete Mathematics
+    </li>
+    <li>
+        CS 2011: Introduction to Machine and Assembly Languages
+    </li>
+
+
+</ul>
+
+<p>
+  Language experience
+</p>
+<ul>
+  <li>
+    HTML: Some
+  </li>
+  <li>
+    CSS: Some
+  </li>
+  <li>
+    Java: A Lot
+  </li>
+  <li>
+    Javascript: None
+  </li>
+  <li>
+    Ruby: Some
+  </li>
+  <li>
+    Python: Some
+  </li>
+  <li>
+    Unit Testing: Some
+  </li>
+</ul>
+</body>
 </html>
