--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
   <title>CS4241 Assignment 1</title>
   <meta charset="utf-8">
+    <style>
+
+    </style>
 </head>
 <body>
 <h1>Information about [Your name here]</h1>
@@ -45,9 +48,10 @@
   <li>WPI
     <p>Have engaged in numerous classes that have furthered my understanding of Front and Back End Development.</p></li>
     
-  <li>
+  <p>
     Changing the Present: Worked as Intern using HTML and CSS for Front End Development.
-  </li>
+      <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwijn_yNpJbdAhVMNd8KHRwSDmcQjRx6BAgBEAU&url=https%3A%2F%2Fchangingthepresent.org%2Fproducts%2Fsupport-changing-the-present&psig=AOvVaw3tPUtjuNx2SUWWrFi2sVCf&ust=1535770223073397">
+  </p>
 </ul>
 
 <p>
