Change Background color

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <title>CS4241 Assignment 1</title>
   <meta charset="utf-8">
     <style>
-
+        .background {
+            color: #94cdbc
+        }
     </style>
 </head>
 <body>
@@ -50,7 +52,6 @@
     
   <p>
     Changing the Present: Worked as Intern using HTML and CSS for Front End Development.
-      <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwijn_yNpJbdAhVMNd8KHRwSDmcQjRx6BAgBEAU&url=https%3A%2F%2Fchangingthepresent.org%2Fproducts%2Fsupport-changing-the-present&psig=AOvVaw3tPUtjuNx2SUWWrFi2sVCf&ust=1535770223073397">
   </p>
 </ul>
 
