--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <head>
   <title>CS4241 Assignment 1</title>
   <meta charset="utf-8">
-    <style>
-        .background {
-            color: #94cdbc
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
 <h1>Information about [Your name here]</h1>
