Change Background color

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-<h1>Information about [Your name here]</h1>
+<h1>Information about Peter Nolan</h1>
 <p>
   [Self introduction]
 <ul>
