Change Background color

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>CS4241 Assignment 1</title>
   <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <h1>Information about Peter Nolan</h1>
