--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
   Working experience
 </p>
 <ul>
-  <li>WPI
-    <p>Have engaged in numerous classes that have furthered my understanding of Front and Back End Development.</p></li>
+  <li>WPI:
+    <p>Have enrolled and achieved high marks in numerous classes that have furthered my understanding of Front and Back End Development.</p></li>
     
-  <p>
-    Changing the Present: Worked as Intern using HTML and CSS for Front End Development.
-  </p>
+  <li>
+    Changing the Present:
+      <p>Worked as Intern using HTML and CSS for Front End Development.</p>
+  </li>
 </ul>
 
 <p>
