--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 <h1>Information about Peter Nolan</h1>
-<p>
-  [Self introduction]
+<h2>
+  Self Introduction
+</h2>
 <ul>
   <li>
     Name: Peter Nolan
@@ -16,9 +17,10 @@
     Class: 2019
   </li>
 </ul>
-</p>
-<p>
-  [Major and other information]
+
+<h2>
+  [Major and Other Information
+</h2>
 <ul>
   <li>
     Major: Computer Science
@@ -28,10 +30,10 @@
   </li>
 
 </ul>
-</p>
-<p>
-  [Other things]
-</p>
+
+<h2>
+  Other things
+</h2>
 <ul>
   <li>
     Member of WPI Game Development Club
@@ -48,7 +50,7 @@
     
   <li>
     Changing the Present:
-      <p>Worked as Intern using HTML and CSS for Front End Development.</p>
+      <p>Worked as an Intern using HTML and CSS for Front End Web Development on Shopify.</p>
   </li>
 </ul>
 
