Change Headers Again

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <h1>Information about Peter Nolan</h1>
-<h3>
+<h2>
   Self Introduction
-</h3>
+</h2>
 <ul>
   <li>
     Name: Peter Nolan
@@ -40,7 +40,9 @@
   </li>
 </ul>
 
-<h2>Experience</h2>
+<h3>
+    Experience
+</h3>
 <p>
   Working experience
 </p>
