--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   Self Introduction
 </h2>
 <ul>
-  <li>
+  <p>
     Name: Peter Nolan
-  </li>
-  <li>
+  </p>
+  <P>
     Class: 2019
-  </li>
+  </P>
 </ul>
 
 <h3>
@@ -48,7 +48,7 @@
 </p>
 <ul>
   <li>WPI:
-    <p>Have enrolled and achieved high marks in numerous classes that have furthered my understanding of Front and Back End Development.</p></li>
+    <p>Have achieved high grades in numerous classes that have furthered my understanding of Front and Back End Development.</p></li>
     
   <li>
     Changing the Present:
