--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
 <h3>
     Experience
 </h3>
-<p>
+<h5>
   Working experience
-</p>
+</h5>
 <ul>
   <li>WPI:
-    <p>Have achieved high grades in numerous classes that have furthered my understanding of Front and Back End Development.</p></li>
-    
+    <p>Have achieved high grades in numerous classes that have furthered my understanding of Front-End and Back-End Development.</p></li>
+
   <li>
-    Changing the Present:
+    Changing The Present:
       <p>Worked as an Intern using HTML and CSS for Front End Web Development on Shopify.</p>
   </li>
 </ul>
 
-<p>
+<h5>
   Previous CS Classes
-</p>
+</h5>
 
 <ul>
     <li>
@@ -101,9 +101,9 @@
 
 </ul>
 
-<p>
+<h5>
   Language experience
-</p>
+</h5>
 <ul>
   <li>
     HTML: Some
