--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     Experience
 </h3>
 <h4>
-  Working experience
+  Working Experience
 </h4>
 <ul>
   <li>WPI:
@@ -52,7 +52,7 @@
 
   <li>
     Changing The Present:
-      <p>Worked as an Intern using HTML and CSS for Front End Web Development on Shopify.</p>
+      <p>Worked as an Intern using HTML and CSS for Front-End Web Development on Shopify.</p>
   </li>
 </ul>
 
@@ -102,7 +102,7 @@
 </ul>
 
 <h4>
-  Language experience
+  Language Experience
 </h4>
 <ul>
   <li>
