--- a/index.html
+++ b/index.html
@@ -39,23 +39,27 @@
     <h2 id="exp">Experience</h2>
     <p>
 
-      	<h3>Research Assistant, Prof Anh Ninh, College of William and Mary, May-August 2018</h3>
+      	<h3>Research Assistant</h3>
+      	<h5>Prof Anh Ninh, College of William and Mary, May-August 2018</h5>
       	<ul>
       	<li>Preprocess data from collected CSV files into Matlab readable tables.</li>
       	<li>Assist in conducting research in machine learning; testing different linear regression methods including variations of Ridge shrinkage methods.</li>
       	<li>Perform root cause analysis of computational issues. Find mitigation solutions.</li>
       	</ul>
-<h3>Teaching Assistant, Frontiers, Launch Summer Program, WPI, July-August 2017</h3>
+<h3>Teaching Assistant</h3> 
+<h5>Frontiers, Launch Summer Program, WPI, July-August 2017</h5>
 <ul>
 <li>Assist in introducing high school students in Computer Science to Web Development. Set up Raspberry Pi’s for use in the class.</li>
 <li>Helped students create the first website of their own.</li> 
 </ul>
-<h3>Student Assistant, Computer Science Department, WPI, August 2016 – present</h3>
+<h3>Student Assistant</h3>
+<h5>Computer Science Department, WPI, August 2016 – present</h5>
 <ul>
 <li>Hold office hours to resolve students’ ambiguities and problems with course.</li>
 <li>Manage computer labs.</li>
 </ul>
-<h3>Web Master, Vietnamese Student Association, WPI, January 2016 – Jan 2017</h3>
+<h3>Web Master</h3>
+<h5>Vietnamese Student Association, WPI, January 2016 – Jan 2017</h5>
 <ul>
 <li>Monitor the cultural club’s website and TechSync page.</li>
 <li>Plan with public relations regarding advertisement of club’s events.</li>
