--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>GETTING STARTED</title>
+<title>About Jerry Assan</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -18,7 +18,7 @@
         line-height: 1.8;
     }
     /* Create a Parallax Effect */
-    .bgimg-a ,.bgimg-b, .bgimg-c{
+    .bgimg-a ,.bgimg-b, .bgimg-c, .bgimg-d{
         background-attachment: fixed;
         background-position: center;
         background-repeat: no-repeat;
@@ -28,7 +28,7 @@
 
     .bgimg-a {
         background-image: url("IMG_5771.jpg");
-        min-height: 600px;
+        min-height: 400px;
     }
 
 
@@ -43,6 +43,11 @@
         min-height: 400px;
     }
 
+    .bgimg-d {
+        background-image: url("4.jpg");
+        min-height: 600px;
+    }
+
 
 
 
@@ -50,73 +55,136 @@
 </style>
   <body>
 
-  <div class="bgimg-a w3-display-container">
-      <div class="w3-display-middle" >
-          <span class="w3-xxlarge w3-text-white w3-wide">About Jerry</span>
+  <div class="bgimg-d w3-display-container">
+      <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center" >
+              <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">Jerry Assan</h1>
+              <h5 class="w3-hide-large" style="white-space:nowrap">Jerry Assan</h5>
+              <h3 class="w3-hide-medium w3-hide-small">About Me</h3>
       </div>
   </div>
-
- <div class="w3-center w3-padding-64">
-    <h1>
+  <div class="container">
+      <div class="row">
+    <div class="col m-lg-5 text-right">
+        <h1>
       WPI class of 2020
-    </h1>
-    <h5>
+        </h1>
+        <h5>
       Major in CS, minor in DS
-    </h5>
-    <h6>
-      A foodie at heart.
-    </h6>
- </div>
-
-  <div class="bgimg-b w3-display-container">
+        </h5>
+        <h6>
+      Fast learner, data driven and a team player
+        </h6>
+        <a href="#">my resume</a>
+    </div>
+          <div class="col m-xl-5">
+              <img src="Me.jpg" style="width:45%" class="w3-circle">
+          </div>
+      </div>
+  </div>
+  <div class="bgimg-a w3-display-container">
       <div class="w3-display-middle" >
           <span class="w3-xxlarge w3-text-white w3-wide">Experience</span>
       </div>
   </div>
+
+  <div>
+      <div class="album py-5 bg-light">
+          <div class="container">
+
+              <div class="row">
+                  <div class="col-md-4">
+                      <div class="card mb-4 box-shadow">
+                          <div class="card-body">
+                              <h4 class="card-title">Portfolio Management Intern</h4>
+                              <h6 class="card-subtitle mb-2 text-muted">summer 2017  |  Shanghai, China</h6>
+                              <p class="card-text p-md-5">Identify risks in various businesses. Research and analyze business data using Microsoft Excel.</p>
+                              <div class="d-flex justify-content-between align-items-center">
+                                  <div class="btn-group">
+                                      <a href="http://jupai.investorroom.com">Jupai Holdings,LLC</a>
+
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-md-4">
+                      <div class="card mb-4 box-shadow">
+                          <div class="card-body">
+                              <h4 class="card-title">Web developper Intern</h4>
+                              <h6 class="card-subtitle mb-2 text-muted">summer 2018  |  Shanghai, China</h6>
+                              <p class="card-text p-md-5">Front-end design using java script , html and css. Implemented backend and server using Mysql and PHP. </p>
+                              <div class="d-flex justify-content-between align-items-center">
+                                  <div class="btn-group">
+                                      <a href="http://www.producemedia.com.cn">Produce Media System</a>
+
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-md-4">
+                      <div class="card mb-4 box-shadow">
+                          <div class="card-body">
+                              <h4 class="card-title">Front-end developer</h4>
+                              <h6 class="card-subtitle mb-2 text-muted">summer 2018  |  Individual project </h6>
+                              <p class="card-text p-md-5">Made a portfolio website for a photographer. Focused mostly on vividly presenting the work of the artist.</p>
+                              <div class="d-flex justify-content-between align-items-center">
+                                  <div class="btn-group">
+                                      <a href="https://j3r3my97.github.io/MaxWeb/index.html">Photographer portfolio</a>
+
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+
+  </div>
+
+  <div class="bgimg-b w3-display-container">
+      <div class="w3-display-middle" >
+          <span class="w3-xxlarge w3-text-white w3-wide">SKills and Tools</span>
+      </div>
+  </div>
 <div class="w3-center container w3-padding-64">
-    <p>CSS</p>
+    <p>Microsoft Office</p>
     <div class="progress">
         <div class="progress-bar bg-secondary" style="width:70%">70%</div>
     </div>
     <p>Java</p>
     <div class="progress border">
+        <div class="progress-bar bg-secondary" style="width:60%">60%</div>
+    </div>
+    <p>Web developmentt</p>
+    <div class="progress border">
         <div class="progress-bar bg-secondary" style="width:80%">80%</div>
-    </div>
-    <p>JavaScript</p>
-    <div class="progress border">
-        <div class="progress-bar bg-secondary" style="width:50%">50%</div>
-    </div>
-    <p>Ruby</p>
-    <div class="progress border">
-        <div class="progress-bar bg-secondary" style="width:5%">5%</div>
     </div>
     <p>Python</p>
     <div class="progress border">
-        <div class="progress-bar bg-secondary" style="width:30%">30%</div>
+        <div class="progress-bar bg-secondary" style="width:75%">75%</div>
     </div>
-    <p>unit testing</p>
+    <p>R sturdio</p>
     <div class="progress border">
-        <div class="progress-bar bg-secondary" style="width:15%">15%</div>
+        <div class="progress-bar bg-secondary" style="width:65%">65%</div>
     </div>
 
 </div>
   <div class="bgimg-c w3-display-container">
       <div class="w3-display-middle" >
-          <span class="w3-xxlarge w3-text-white w3-wide">Courses taken</span>
+          <span class="w3-xxlarge w3-text-white w3-wide">Contact</span>
       </div>
   </div>
- <div class="w3-center w3-padding-64">
-    <ul>
-        <p>CS1101 - Introduction to Program Design</p>
-        <p>CS2102 - Object-Oriented Design Concepts</p>
-        <p>CS2303 - System Programming Concepts</p>
-        <p>CS3041 - Human Computer Interaction</p>
-        <p>CS3431 - Database Systems I</p>
-        <p>CS2223 - Algorithms</p>
-        <p>CS3733 - Software Engineering</p>
-        <p>CS3133 - Foundations of Computer Science</p>
-        <p>CS4120 - ANALYSIS OF ALGORITHMS</p>
-    </ul>
- </div>
+          <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
+              <h2 class="w3-text-dark">Contact Me</h2>
+              <hr style="width:200px" class="w3-opacity">
+
+              <div class="w3-section">
+                  <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right" style="color:black"></i> Worcester, US</p>
+                  <p><i class="fa fa-phone fa-fw  w3-xxlarge w3-margin-right"></i> Phone: 7743123467</p>
+                  <p><i class="fa fa-envelope fa-fw  w3-xxlarge w3-margin-right"> </i> Email: jxassan@wpi.edu</p>
+              </div><br>
+
+              <!-- End Contact Section -->
+          </div>
   </body>
 </html>
