--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
         <h6>
       Fast learner, data driven and a team player
         </h6>
-        <a href="#">my resume</a>
+        <a href="https://github.com/J3r3my97">my git</a>
+        <br>
+        <a href="https://j3r3my97.github.io/Jerry.github.io">Design manifesto</a>
     </div>
           <div class="col m-xl-5">
               <img src="Me.jpg" style="width:45%" class="w3-circle">
