--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
  <html lang="en">
+<div id ="particles-js">
   <head>
-    <title>CS4241 Assignment 1</title>
+    <title>surya v.</title>
     <meta charset="utf-8">
+      <script src="myscripts.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
   </head>
   <body>
     <div id=fadeName><h1 align="middle" style=" margin-bottom: 5px;">surya vadivazhagu</h1></div>
-    <div id=fadeAvatar style="display: flex; justify-content: center;" alt="Avatar"> 
+    <div id=fadeAvatar style="display: flex; justify-content: center;" alt="Avatar">
     <img src="self.jpg" >
   </div>
     <div id =fadeNav class="topnav" align="middle">
@@ -15,7 +19,7 @@
         /
         <a href="https://github.com/svadivazhagu" target="_blank" >github</a>
         /
-        <a href="mailto:svadivazhagu@wpi.edu">e-mail me</a>
+        <a href="mailto:svadivazhagu@wpi.edu">e-mail</a>
         /
         <a href="suryaResumeAug.pdf" download>cv</a>
     </div>
@@ -25,7 +29,7 @@
     <div id=fadeObjectiveContent>
     <p>
      passionate computer scientist looking to leverage my experience in <br>
-     web and system development to solve real-world problems while gaining <br>experience about the industry and the current state of the CS world. </br> 
+     web and system development, to solve real-world problems while gaining <br>experience and delivering quality code. </br>
     </p>
     </div>
     <div id=fadeEducationTitle>
@@ -38,38 +42,37 @@
         <li><i>Minor in BCB.</i></li> </ul>
     </ul>
 </div>
-<div id=fadeCoursesTitle>   
-    
+<div id=fadeCoursesTitle>
+
     <h3>courses @ WPI</h3>
 </div>
     <div id=fadeCoursesContent>
     <ul>
+        <li>CS-534 <i>Artificial Intelligence</i></li>
         <li>CS-3733 <i>Software Engineering</i></li>
         <li>CS-3043 <i>Social Implications of Computing</i></li>
         <li>CS-3041 <i>Human-Computer Interaction</i></li>
-        <li>CS-2011 <i>Assembly & Machine Language</i></li>
-        <li>CS-2102 <i>Systems Programming Concepts</i></li>
     </ul>
-</div>   
+</div>
 <div id =fadeSkillsTitle>
-    <h3>skills</h3> 
+    <h3>skills</h3>
     hover over each for a surprise! <br>
     </div>
     <div id=fadeSkillsContent>
     <ul>
-        <li> <div class="tooltip">html 
+        <li> <div class="tooltip">html
             <span class="tooltiptext">I've designed personal web pages as well as for campus clubs and have a decent amount of experience with HTML.</span>
           </div></li>
-         <li><div class="tooltip">css/js 
-            <span class="tooltiptext">I've used Bootstrap to design dynamic and rich websites, and I love i-frames! Being able to connect to so many web services through JS is fantastic. Love RESTful APIs!</span>
+         <li><div class="tooltip">css/js
+            <span class="tooltiptext"><a class="active" href="http://a2-teamsunryse.herokuapp.com" target="_blank">Check out SunRyse, a web service I helped write for beautiful weather information.</a></span>
           </div></li>
-         <li><div class="tooltip">java 
-            <span class="tooltiptext">Significant knowledge, I've worked as a back-end engineer creating metrics apps to measure performance for microservice-based programs on AWS.</span>
+         <li><div class="tooltip">java
+            <span class="tooltiptext">I've worked as a back-end engineer creating metrics apps to measure performance for microservice-based programs on AWS.</span>
           </div></li>
-           <li><div class="tooltip">ruby 
-            <span class="tooltiptext">None as of yet. Hope to get some in WebWare!</span>
+           <li><div class="tooltip">python
+            <span class="tooltiptext">I'm working on AI projects using sci-kit. So far, I've made a simple reflex agent for a vacuum cleaner environment.</span>
           </div></li>
-        <li><div class="tooltip">junit/testing 
+        <li><div class="tooltip">junit/testing
             <span class="tooltiptext">Good experience with JUnit as well as Mockito for Java unit testing. Have used Postman to test my APIs.</span>
           </li>
     </ul>
@@ -80,6 +83,8 @@
     </div>
     <div id =fadeWorkContent>
     <ul>
+      <li><a class="active" href="https://medium.com/@svadivazhagu/campus-emergency-response-a-case-of-good-design-7748c86b863a" target="_blank">I wrote about good design in college campuses.</a> </li>
+        <li><a class="active" href="https://medium.com/@svadivazhagu/a-case-of-poor-design-89885d6c7d62" target="_blank">In follow up to the previous one, an article on poor design.</a> </li>
       <li>TraceLink, Inc.</li>
         <ul>
             <li>Software Engineering Intern, <i>May 2018 - July 2018</i></li>
@@ -89,5 +94,10 @@
             <li>Community Outreach Intern, <i>May 2017 - Aug. 2017</i></li>
         </ul>
     </ul>
-</div>  
+</div>
+</body>
+</div>
+<script type="text/javascript">
+ particlesJS("particles-js",<strong>particlesjs-config</strong>);
+</script>
 </html>
