--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   		<a href="#home">Home</a>
       <a href="#course_taken">Courses</a>
       <a href="#exp">Experience</a>
+      <a href="#projects">Projects</a>
   		<a href="#about">About</a>
   		
   		
@@ -48,6 +49,37 @@
     </ul> 
     </p>
 
+    <h2 id="projects">Projects</h2>
+    <p>
+
+        <h3>Battle of Gettysburg Simulation Game</h3>
+        <h5>Object-Oriented Analysis and Design, WPI, August – October 2017</h5>
+        <ul>
+        <li> Developed Java back-end logic for a desktop game simulating the Gettysburg battle. </li>
+        <li> Used different design patterns like Factory, Strategy and State patterns.</li>
+        <li> Utilized Test-Driven Development (TDD) in implementation. Used JUnit and Java Cucumber Testing</li>
+        <li> Integrated 5 SOLID principles in the design and implementation of the project.  </li>
+        </ul>
+<h3>Letter Craze</h3> 
+<h5>Software Engineering, WPI, August-October 2017</h5>
+<ul>
+<li> With a team of 5 members, develop a desktop game which allows players to create words from randomly generated letters</li> 
+<li> Employed the MVC model, utilized Java Swing UI for front-end implementation.</li>
+</ul>
+<h3>Fuller Laboratory Building Database</h3>
+<h5>Database Systems, WPI, August – October 2017</h5>
+<ul>
+<li> Designed a database for the Computer Science building map. </li>
+<li> Implemented constraints and triggers for future usage of the map. </li>
+</ul>
+<h3>Meeting Buddy</h3>
+<h5>Android Programming, WPI, December 2017 – March 2018</h5>
+<ul>
+<li> Lead a team of 5 to create an Android app for making, managing meetings.</li>
+<li> Designed the application’s UI/UX.</li>
+
+      </ul>
+    </p>
     <h2 id="exp">Experience</h2>
     <p>
 
