Fixed link to resume

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <br></br>
     Check out my resume! 
 
-    <a href="Resume.pdf" download> Trang Ha</a>
+    <a href="https://drive.google.com/open?id=1TkjeStk0LY55PuXJEd6QMCP34h-LPhLz"> Resume</a>
 
     <h2 id="course_taken"> Courses taken at WPI:</h2>
     <p>
@@ -49,7 +49,7 @@
     </ul> 
     </p>
 
-    <h2 id="projects">Projects</h2>
+    <h2 id="projects">Projects at WPI</h2>
     <p>
 
         <h3>Battle of Gettysburg Simulation Game</h3>
