changed a thing to mess with nothing

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <img>
 <h1>Information about John O'Leary</h1>
     <p>
-      I am a senior at WPI, looking to pursue a career in computer engineering
+      I am a senior at WPI, lookinaag to pursue a career in computer engineering
     </p>
     <p>
       Electrical and Computer Engineering Major seeking a minor in Computer Science
